MODDICORE-428 Error appeared when in donor field for order field mapping profile user set 2 incorrect values